# OpenGL

./: .gitignore  CMakeLists.txt  LoadShaders.cpp  LoadShaders.h  main.cpp
Resources/: triangles.vert
Resources/shaders/: instancing.vert
Resources/shaders/instancing/: instancing.frag  instancing2.vert
include/: vgl.h
